--- a/consultancy.html
+++ b/consultancy.html
@@ -101,7 +101,8 @@
             </div>
 
             <div class="text-center mt-5">
-                <p class=" small">* Ödemeler randevu öncesi Havale/EFT yoluyla alınmaktadır.</p>
+                <p class=" small">* Tüm danışmanlıklar gizlidir.
+                    Kişiye özel analiz yapılır.</p>
             </div>
 
         </div>
