--- a/about.html
+++ b/about.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burçyora Astro</title>
+    <title>Hakkımda - Burçyora Astro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Montserrat:wght@300;400&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="about-page-body">
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand logo-text" href="/index.html">BURÇYORA ASTRO</a>
@@ -29,42 +29,101 @@
                         <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlıklar</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Neden Biz?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/danismanlik.html">İletişim</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
                     </ul>
                 </ul>
             </div>
         </div>
     </nav>
-    <section class="hero-section d-flex align-items-center">
+    <section class="about-hero-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 hero-content">
-                    <!-- <h1 class="display-4 fw-bold">HER HARİTA BİR <br> <span class="text-gold">HİKAYE TAŞIR...</span>
-                    </h1> -->
-                    <p class="lead mt-3">Ben Burcyora.</p>
-                    <p class="lead mt-3">Küçüklükten beri sezgisel algısı gelişmiş, analitik düşünceye yatkın, meraklı
-                        biriyim.
-                        Astrolojiyi; insanların kendilerini tanımaları, ilişkilerini anlamaları ve hayat yollarını
-                        netleştirmeleri için bir rehber olarak kullanıyorum.
 
-                        Doğum haritalarına yaklaşımım:
-                        • Sade
-                        • Derin
-                        • Samimi
-                        • Yol gösterici
-
-                        Sizi karmaşadan uzaklaştırıp sade gerçeğe taşıyorum.</p>
-                    <a href="#" class="btn btn-gold mt-4">DANIŞMANLIK AL</a>
+                <div class="col-lg-5 mb-5 mb-lg-0">
+                    <div class="about-portrait-wrapper">
+                        <img src="/assets/img/underconst.jpeg" alt="Burçyora" class="img-fluid about-portrait">
+                        <div class="portrait-border"></div>
+                    </div>
                 </div>
 
-                <div class="col-lg-6 text-center position-relative">
-                    <div class="glow-effect"></div>
-                    <img src="/assets/img/aboutme.jpeg" alt="Astroloji ve Kelebek" class="img-fluid hero-image">
+                <div class="col-lg-7 ps-lg-5">
+                    <h5 class="text-gold mb-2">MERHABA, BEN</h5>
+                    <h1 class="display-4 text-white mb-4" style="font-family: 'Cinzel', serif;">BURÇYORA</h1>
+
+                    <div class="about-content text-light">
+                        <p class="lead">
+                            Küçüklükten beri sezgisel algısı gelişmiş, analitik düşünceye yatkın ve daima meraklı biri
+                            oldum.
+                        </p>
+                        <p>
+                            Gökyüzünün matematiği ile ruhun derinlikleri arasındaki o ince çizgide yürümeyi seviyorum.
+                            Astrolojiyi; insanların kendilerini tanımaları, ilişkilerini anlamaları ve hayat yollarını
+                            netleştirmeleri için bir rehber olarak kullanıyorum.
+                        </p>
+
+                        <div class="motto-box mt-4 mb-4">
+                            <i class="bi bi-quote text-gold fs-3"></i>
+                            <p class="mb-0 fst-italic">"Sizi karmaşadan uzaklaştırıp sade gerçeğe taşıyorum."</p>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
+
+    <section class="values-section">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="section-title border-0">HARİTALARA <span class="text-gold">YAKLAŞIMIM</span></h2>
+                <div class="gold-divider mx-auto"></div>
+            </div>
+
+            <div class="row g-4">
+
+                <div class="col-md-3 col-6">
+                    <div class="value-card text-center">
+                        <i class="bi bi-feather text-gold fs-1 mb-3"></i>
+                        <h4 class="text-white">SADE</h4>
+                        <p class="text small">Karmaşık terimlerden uzak, anlaşılır bir dil.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-6">
+                    <div class="value-card text-center">
+                        <i class="bi bi-gem text-gold fs-1 mb-3"></i>
+                        <h4 class="text-white">DERİN</h4>
+                        <p class="text small">Yüzeysel değil, ruhun özüne inen analizler.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-6">
+                    <div class="value-card text-center">
+                        <i class="bi bi-heart text-gold fs-1 mb-3"></i>
+                        <h4 class="text-white">SAMİMİ</h4>
+                        <p class="text small">Yargılamayan, içten ve güvenilir bir bağ.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-6">
+                    <div class="value-card text-center">
+                        <i class="bi bi-compass text-gold fs-1 mb-3"></i>
+                        <h4 class="text-white">YOL GÖSTERİCİ</h4>
+                        <p class="text small">Belirsizlikte kaybolmamanız için ışık tutan rehberlik.</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer class="site-footer text-center" style="background-color: #050508; padding: 40px 0;">
+        <div class="container">
+            <p class="tex small mb-0">&copy; 2025 Burçyora Astro.</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
