--- a/danismanlik.html
+++ b/danismanlik.html
@@ -26,10 +26,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="/about.html">Hakkımızda</a></li>
                     <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlıklar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Gökyüzü Günlüğü</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Neden Biz?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/skydiary.html">Gökyüzü Günlüğü</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/whyus.html">Neden Biz?</a></li>
                     <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
+                    <li class="nav-item"><a class="nav-link btn-iletisim" href="/danismanlik.html">İletişim</a></li>
                 </ul>
             </div>
         </div>
@@ -106,5 +106,6 @@
         </div>
     </section>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
