--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand logo-text" href="/index.html">BURÇYORA ASTRO</a>
+            <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
+            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
+                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
+            </a>
+
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
@@ -27,7 +32,8 @@
                 <ul class="navbar-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="/about.html">Hakkımızda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlıklar</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlık Hizmetleri</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="/skydiary.html">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="/whyus.html">Neden Biz?</a></li>
                         <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
@@ -69,14 +75,21 @@
                     <h2 class="section-title">BEN <span class="text-gold">KİMİM?</span></h2>
 
                     <p class="lead text-white mt-4">
-                        "Ben Burçyora Astro'nun kurucusu olarak sezgisel bilgiyi derin astrolojik analizle birleştiren
-                        bir yolculuktayım."
+                        Ben Burcyora Astro’nun kurucusu,
+                        sezgisel ve analitik astrolojiyi birleştiren bir astroloji danışmanıyım.
                     </p>
 
                     <p class="about-text">
-                        Her doğum haritasının benzersiz bir hikayesi olduğunu düşünüyorum. Gökyüzünün sessiz mesajlarını
-                        sizin için görünür kılmak benim işim. Yıldızların rehberliğinde, potansiyelinizi keşfetmeniz
-                        için buradayım.
+                        Her doğum haritasının kendine özgü bir hikâyesi olduğuna inanıyorum.
+                        Benim amacım; gökyüzünün mesajlarını karmaşadan arındırarak,
+                        net, anlaşılır ve uygulanabilir bir şekilde sana aktarmak.
+                    </p>
+                    <p class="about-text">
+                        Astrolojiyi;
+                        kendini tanıman, ilişkilerini anlaman ve hayat yolunu netleştirmen için
+                        bir rehber olarak kullanıyorum.
+
+                        Yıldızların rehberliğinde, kendi potansiyelini keşfetmen için buradayım.
                     </p>
 
                     <div class="mt-4">
@@ -104,9 +117,9 @@
                         </div>
                         <h3>Doğum Haritası Analizi</h3>
                         <ul class="service-list">
-                            <li>Kişilik ve Karakter Analizi</li>
-                            <li>Yaşam Yolu ve Amacı</li>
-                            <li>Gizli Potansiyellerin Keşfi</li>
+                            <li>Kişilik yapın & güçlü yönlerin</li>
+                            <li>Hayat amacın ve kader temaların</li>
+                            <li>İlişki, kariyer ve para potansiyelin</li>
                         </ul>
                         <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
                     </div>
@@ -150,7 +163,7 @@
                         <h3>Yıllık & Aylık Transit</h3>
                         <ul class="service-list">
                             <li>Yaklaşan Gökyüzü Enerjileri</li>
-                            <li>Doğru Zamanlama (Eşref Saati)</li>
+                            <li>Doğru Zamanlama</li>
                             <li>Önümüzdeki Süreç Öngörüleri</li>
                         </ul>
                         <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
@@ -173,25 +186,26 @@
                 <div class="col-lg-8">
                     <div class="journal-list">
 
-                        <a href="#" class="journal-item">
+                        <a href="/skydiary.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-sun"></i></span>
-                            <span class="journal-text">Bugünün Enerjisi: Gökyüzü ne fısıldıyor?</span>
+                            <span class="journal-text">Bugünün Enerjisi: Gökyüzü ne
+                                fısıldıyor?</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="#" class="journal-item">
+                        <a href="/skydiary.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-calendar-week"></i></span>
                             <span class="journal-text">Haftalık Gökyüzü Yorumu (Burç Bazında)</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="#" class="journal-item">
+                        <a href="/skydiary.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-moon"></i></span>
                             <span class="journal-text">Yeni Ay & Dolunay Ritüelleri</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="#" class="journal-item">
+                        <a href="/skydiary.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-battery-charging"></i></span>
                             <span class="journal-text">Düşen Enerji İçin Tavsiyeler</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
