--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/about.html">Hakkımızda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlık Hizmetleri</a>
+                        <li class="nav-item"><a class="nav-link" href="/hakkimizda.html">Hakkımızda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
+                                Hizmetleri</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/skydiary.html">Gökyüzü Günlüğü</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/whyus.html">Neden Biz?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/danismanlik.html">İletişim</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
+
+                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
                     </ul>
                 </ul>
             </div>
@@ -93,7 +94,7 @@
                     </p>
 
                     <div class="mt-4">
-                        <span class="signature">Sevgiler, Burçyora...</span>
+                        <span class="signature">Sevgiler, Burcyora...</span>
                     </div>
                 </div>
 
@@ -121,7 +122,7 @@
                             <li>Hayat amacın ve kader temaların</li>
                             <li>İlişki, kariyer ve para potansiyelin</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
+                        <a href="/danismanlikhizmetleri.html" class="btn btn-outline-gold mt-3">Randevu Al</a>
                     </div>
                 </div>
 
@@ -136,7 +137,7 @@
                             <li>Kadersel Bağlar</li>
                             <li>İlişkinin Güçlü & Zayıf Yönleri</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
+                        <a href="/danismanlikhizmetleri.html" class="btn btn-outline-gold mt-3">Randevu Al</a>
                     </div>
                 </div>
 
@@ -151,7 +152,7 @@
                             <li>Finansal Yönelimler</li>
                             <li>Kariyer Dönüm Noktaları</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
+                        <a href="/danismanlikhizmetleri.html" class="btn btn-outline-gold mt-3">Randevu Al</a>
                     </div>
                 </div>
 
@@ -166,7 +167,7 @@
                             <li>Doğru Zamanlama</li>
                             <li>Önümüzdeki Süreç Öngörüleri</li>
                         </ul>
-                        <a href="#" class="btn btn-outline-gold mt-3">Randevu Al</a>
+                        <a href="/danismanlikhizmetleri.html" class="btn btn-outline-gold mt-3">Randevu Al</a>
                     </div>
                 </div>
 
@@ -186,26 +187,26 @@
                 <div class="col-lg-8">
                     <div class="journal-list">
 
-                        <a href="/skydiary.html" class="journal-item">
+                        <a href="/blog.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-sun"></i></span>
                             <span class="journal-text">Bugünün Enerjisi: Gökyüzü ne
                                 fısıldıyor?</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="/skydiary.html" class="journal-item">
+                        <a href="/blog.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-calendar-week"></i></span>
                             <span class="journal-text">Haftalık Gökyüzü Yorumu (Burç Bazında)</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="/skydiary.html" class="journal-item">
+                        <a href="/blog.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-moon"></i></span>
                             <span class="journal-text">Yeni Ay & Dolunay Ritüelleri</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
-                        <a href="/skydiary.html" class="journal-item">
+                        <a href="/blog.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-battery-charging"></i></span>
                             <span class="journal-text">Düşen Enerji İçin Tavsiyeler</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
@@ -221,16 +222,16 @@
     <footer id="iletisim" class="site-footer text-center">
         <div class="container">
 
-            <h3 class="footer-logo mb-4">BURÇYORA ASTRO</h3>
+            <h3 class="footer-logo mb-4">BURCYORA ASTRO</h3>
 
             <div class="social-icons mb-4">
-                <a href="https://instagram.com/burcyoraastro" target="_blank" class="social-link">
-                    <i class="bi bi-instagram"></i> @burcyoraastro
-                </a>
-                <span class="mx-3 text-muted">|</span>
-                <a href <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-                    </script>
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                <a href="https://instagram.com/burcyora" target="_blank" class="social-link">
+                    <i class="bi bi-instagram"></i> @burcyora
+                    <span class="mx-3 text-muted">|</span>
+    </footer>
+    <a href <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
