--- a/nedenbiz.html
+++ b/nedenbiz.html
@@ -43,20 +43,47 @@
             </div>
         </div>
     </nav>
-    <section class="hero-section d-flex align-items-center">
+    <section class="about-hero-section">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 hero-content">
-                    <h1 class="display-4 fw-bold">YAPIM <br> <span class="text-gold">AŞAMASINDA...</span>
-                    </h1>
 
-                    <!-- <a href="/danismanlik.html" class="btn btn-gold mt-4">DANIŞMANLIK AL</a> -->
+                <div class="col-lg-5 mb-5 mb-lg-0">
+                    <div class="about-portrait-wrapper">
+                        <img src="/assets/img/nedenbiz.jpeg" alt="Burçyora" class="img-fluid about-portrait">
+                        <div class="portrait-border"></div>
+                    </div>
                 </div>
 
-                <div class="col-lg-6 text-center position-relative">
-                    <div class="glow-effect"></div>
-                    <img src="/assets/img/underconst.jpeg" alt="Astroloji ve Kelebek" class="img-fluid hero-image">
+                <div class="col-lg-7 ps-lg-5">
+                    <h5 class="text-gold mb-2">Neden </h5>
+                    <h1 class="display-4 text-white mb-4" style="font-family: 'Cinzel', serif;"> Burcyora Astro?</h1>
+
+                    <div class="about-content text-light">
+                        <!-- <p class="lead">
+                            Sezgisel & Analitik Astroloji Danışmanı
+                        </p> -->
+                        <p>
+                            Çünkü biz astrolojiyi ezber yorumlarla değil,
+                            kişiye özel haritalarla okuyoruz.
+
+                        </p>
+                        <p> Burçtan öteye geçip;
+                            neden aynı döngüleri yaşadığını,
+                            hangi alanda zorlandığını
+                            ve şu an hangi eşiğe geldiğini gösteriyoruz.</p>
+                        <p>
+                            Burcyora Astro’da amaç;
+                            tahmin değil farkındalık,
+                            genel yorum değil netliktir
+                        </p>
+
+                        <div class="motto-box mt-4 mb-4">
+                            <i class="bi bi-quote text-gold fs-3"></i>
+                            <p class="mb-0 fst-italic">Haritana gerçekten bakmak isteyenler için buradayız.</p>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
