--- a/danismanlikhizmetleri.html
+++ b/danismanlikhizmetleri.html
@@ -17,7 +17,12 @@
 
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand logo-text" href="/index.html">BURÇYORA ASTRO</a>
+            <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
+            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
+                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
+            </a>
+
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
@@ -26,12 +31,14 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/about.html">Hakkımızda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlıklar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/skydiary.html">Gökyüzü Günlüğü</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/whyus.html">Neden Biz?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/danismanlik.html">İletişim</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/hakkimizda.html">Hakkımızda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
+                                Hizmetleri</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
+
+                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
                     </ul>
                 </ul>
             </div>
@@ -107,7 +114,16 @@
 
         </div>
     </section>
+    <footer id="iletisim" class="site-footer text-center">
+        <div class="container">
 
+            <h3 class="footer-logo mb-4">BURCYORA ASTRO</h3>
+
+            <div class="social-icons mb-4">
+                <a href="https://instagram.com/burcyora" target="_blank" class="social-link">
+                    <i class="bi bi-instagram"></i> @burcyora
+                    <span class="mx-3 text-muted">|</span>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
