--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -16,7 +16,12 @@
 <body class="about-page-body">
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand logo-text" href="/index.html">BURÇYORA ASTRO</a>
+            <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
+            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
+                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
+            </a>
+
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
@@ -25,12 +30,14 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/about.html">Hakkımızda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/consultancy.html">Danışmanlıklar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/skydiary.html">Gökyüzü Günlüğü</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/whyus.html">Neden Biz?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/danismanlik.html">İletişim</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/hakkimizda.html">Hakkımızda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
+                                Hizmetleri</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
+
+                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
                     </ul>
                 </ul>
             </div>
@@ -49,22 +56,22 @@
 
                 <div class="col-lg-7 ps-lg-5">
                     <h5 class="text-gold mb-2">MERHABA, BEN</h5>
-                    <h1 class="display-4 text-white mb-4" style="font-family: 'Cinzel', serif;">BURÇYORA</h1>
+                    <h1 class="display-4 text-white mb-4" style="font-family: 'Cinzel', serif;">BURCYORA</h1>
 
                     <div class="about-content text-light">
                         <p class="lead">
-                            Küçüklükten beri sezgisel algısı gelişmiş, analitik düşünceye yatkın ve daima meraklı biri
-                            oldum.
+                            Sezgisel & Analitik Astroloji Danışmanı
                         </p>
                         <p>
-                            Gökyüzünün matematiği ile ruhun derinlikleri arasındaki o ince çizgide yürümeyi seviyorum.
-                            Astrolojiyi; insanların kendilerini tanımaları, ilişkilerini anlamaları ve hayat yollarını
-                            netleştirmeleri için bir rehber olarak kullanıyorum.
+                            Astrolojiyi, kendini ve hayat yolunu daha net görmek isteyenler için sade bir rehber olarak
+                            kullanıyorum.
+                            Her doğum haritasının kendine özgü bir hikâyesi vardır; ben bu hikâyeyi anlaşılır ve net bir
+                            dille yorumluyorum.
                         </p>
 
                         <div class="motto-box mt-4 mb-4">
                             <i class="bi bi-quote text-gold fs-3"></i>
-                            <p class="mb-0 fst-italic">"Sizi karmaşadan uzaklaştırıp sade gerçeğe taşıyorum."</p>
+                            <p class="mb-0 fst-italic">"“Karmaşayı azaltır, netlik kazandırırım”"</p>
                         </div>
                     </div>
                 </div>
@@ -118,10 +125,15 @@
         </div>
     </section>
 
-    <footer class="site-footer text-center" style="background-color: #050508; padding: 40px 0;">
+    <footer id="iletisim" class="site-footer text-center">
         <div class="container">
-            <p class="tex small mb-0">&copy; 2025 Burçyora Astro.</p>
-        </div>
+
+            <h3 class="footer-logo mb-4">BURCYORA ASTRO</h3>
+
+            <div class="social-icons mb-4">
+                <a href="https://instagram.com/burcyora" target="_blank" class="social-link">
+                    <i class="bi bi-instagram"></i> @burcyora
+                    <span class="mx-3 text-muted">|</span>
     </footer>
 
 </body>
