--- a/danismanlikhizmetleri.html
+++ b/danismanlikhizmetleri.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
             <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
 
@@ -57,7 +57,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="pricing-card">
                         <div class="card-icon">🌕</div>
-                        <h3 class="package-title">Temel Harita Analizi</h3>
+                        <h3 class="package-title">Doğum Haritası Analizi</h3>
                         <div class="package-duration"><i class="bi bi-clock"></i> 45 Dakika (Sesli/Yazılı)</div>
 
                         <ul class="package-features">
@@ -66,7 +66,7 @@
                             <li><i class="bi bi-check2-circle text-gold"></i> Dönemsel transit etkileri</li>
                         </ul>
 
-                        <div class="price-tag">1000 TL</div>
+                        <div class="price-tag">1500 TL</div>
                         <a href="danismanlik.html" class="btn btn-outline-gold w-100 mt-3">RANDEVU OLUŞTUR</a>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                             <li><i class="bi bi-check2-circle text-gold"></i> Kadersel kesişimler</li>
                         </ul>
 
-                        <div class="price-tag">1000 TL</div>
+                        <div class="price-tag">1500 TL</div>
                         <a href="danismanlik.html" class="btn btn-outline-gold w-100 mt-3">RANDEVU OLUŞTUR</a>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                             <li><i class="bi bi-check2-circle text-gold"></i> Ruhsal hayat dersi</li>
                         </ul>
 
-                        <div class="price-tag">1000 TL</div>
+                        <div class="price-tag">1500 TL</div>
                         <a href="danismanlik.html" class="btn btn-outline-gold w-100 mt-3">RANDEVU OLUŞTUR</a>
                     </div>
                 </div>
