--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
             <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
 
@@ -94,7 +94,7 @@
                     </p>
 
                     <div class="mt-4">
-                        <span class="signature">Sevgiler, Burcyora...</span>
+                        <span class="signature">Sevgilerle, Burcyora...</span>
                     </div>
                 </div>
 
@@ -208,7 +208,7 @@
 
                         <a href="/blog.html" class="journal-item">
                             <span class="journal-icon"><i class="bi bi-battery-charging"></i></span>
-                            <span class="journal-text">Düşen Enerji İçin Tavsiyeler</span>
+                            <span class="journal-text">Enerji Dengeleme Tavsiyeleri</span>
                             <span class="journal-arrow"><i class="bi bi-arrow-right"></i></span>
                         </a>
 
