--- a/danismanlik.html
+++ b/danismanlik.html
@@ -18,7 +18,7 @@
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
             <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
 
@@ -53,19 +53,16 @@
 
             <div class="row justify-content-center">
                 <div class="col-lg-8">
-                    <form action="https://formsubmit.co/burcyoraastro@gmail.com" method="POST" class="astro-form">
+                    <form id="appointmentForm" class="astro-form">
 
-                        <input type="hidden" name="_subject" value="Yeni Astroloji Başvurusu Var! 🌟">
-                        <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_next" value="https://burcyoraastro.com/tesekkurler.html">
                         <div class="row g-3 mb-3">
                             <div class="col-md-6">
-                                <label class="form-label text-gold">Adın Soyadın</label>
+                                <label class="form-label text-gold">Ad Soyad</label>
                                 <input type="text" name="Ad_Soyad" class="form-control custom-input"
                                     placeholder="Örn: Burcu Şahin" required>
                             </div>
                             <div class="col-md-6">
-                                <label class="form-label text-gold">E-posta Adresin</label>
+                                <label class="form-label text-gold">E-posta Adresi</label>
                                 <input type="email" name="Email" class="form-control custom-input"
                                     placeholder="iletisim@mail.com" required>
                             </div>
@@ -101,14 +98,19 @@
                         <div class="mb-4">
                             <label class="form-label text-gold">Notun veya Merak Ettiğin Konular</label>
                             <textarea name="Mesaj" rows="4" class="form-control custom-input"
-                                placeholder="Özellikle odaklanmamı istediğin bir konu var mı? (Örn: Kariyer, İlişkiler...)"></textarea>
+                                placeholder="Özellikle odaklanmamı istediğin bir konu var mı?"></textarea>
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-gold w-100 py-3"> GÖNDER </button>
+                            <button type="submit" id="appSubmitBtn" class="btn btn-gold w-100 py-3">
+                                <span id="appBtnText"> GÖNDER </span>
+                                <span id="appBtnLoader" class="spinner-border spinner-border-sm d-none" role="status"
+                                    aria-hidden="true"></span>
+                            </button>
                         </div>
                         <p class="mt-3">Sorularınız analiz sonrası size özel sesli kayıt ile yanıtlanır.</p>
                         <p>Ödeme IBAN ile alınmaktadır. Ödeme onayı sonrası analiz süreci başlar.</p>
+                        <p>TR73 0004 6003 2388 8000 2006 35 - Burcu Şahiner</p>
                     </form>
                 </div>
             </div>
@@ -127,5 +129,6 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="form.js"></script>
 
 </html>
