--- a/iletisim.html
+++ b/iletisim.html
@@ -19,7 +19,7 @@
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
             <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
 
@@ -44,59 +44,119 @@
             </div>
         </div>
     </nav>
-    <section class="contact-card-section d-flex align-items-center justify-content-center">
+    <section class="contact-split-section d-flex align-items-center">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-5">
+            <div class="row align-items-center justify-content-center g-5">
 
+                <div class="col-lg-6">
+                    <div class="contact-form-wrapper fade-in-up">
+                        <h2 class="text-white mb-2" style="font-family: 'Cinzel', serif;">BİZE <span
+                                class="text-gold">YAZIN</span></h2>
+                        <p class="text mb-4 small">Sorularınız veya randevu talepleriniz için formu
+                            doldurabilirsiniz.</p>
+
+                        <!-- <form action="https://formsubmit.co/u.akbas1982@gmail.com" method="POST">
+
+                            <input type="hidden" name="_subject" value="İletişim Sayfasından Mesaj Var! 📩">
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_next" value="https://burcyoraastro.com/iletisim.html">
+
+                            <div class="mb-3">
+                                <label class="text-gold small mb-1">Adınız Soyadınız</label>
+                                <input type="text" name="Ad_Soyad" class="form-control custom-input"
+                                    placeholder="İsim Giriniz" required>
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="text-gold small mb-1">E-Posta Adresiniz</label>
+                                <input type="email" name="Email" class="form-control custom-input"
+                                    placeholder="ornek@mail.com" required>
+                            </div>
+
+                            <div class="mb-4">
+                                <label class="text-gold small mb-1">Mesajınız / Açıklama</label>
+                                <textarea name="Mesaj" rows="4" class="form-control custom-input"
+                                    placeholder="Size nasıl yardımcı olabilirim?" required></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-gold w-100 py-2 fw-bold"> GÖNDER </button>
+                        </form> -->
+                        <form id="contactForm">
+
+                            <div class="mb-3">
+                                <label class="text-gold small mb-1">Adınız Soyadınız</label>
+                                <input type="text" name="Ad_Soyad" id="nameInput" class="form-control custom-input"
+                                    placeholder="İsim Giriniz" required>
+                            </div>
+
+                            <div class="mb-3">
+                                <label class="text-gold small mb-1">E-Posta Adresiniz</label>
+                                <input type="email" name="Email" id="emailInput" class="form-control custom-input"
+                                    placeholder="ornek@mail.com" required>
+                            </div>
+
+                            <div class="mb-4">
+                                <label class="text-gold small mb-1">Mesajınız / Açıklama</label>
+                                <textarea name="Mesaj" id="messageInput" rows="4" class="form-control custom-input"
+                                    placeholder="Size nasıl yardımcı olabilirim?" required></textarea>
+                            </div>
+
+                            <button type="submit" id="submitBtn" class="btn btn-gold w-100 py-2 fw-bold">
+                                <span id="btnText"> GÖNDER </span>
+                                <span id="btnLoader" class="spinner-border spinner-border-sm d-none" role="status"
+                                    aria-hidden="true"></span>
+                            </button>
+
+                            <div id="formResult" class="mt-3 text-center small fw-bold"></div>
+
+                        </form>
+                    </div>
+                </div>
+
+                <div class="col-lg-5 offset-lg-1">
                     <div class="contact-card text-center fade-in-up">
+
                         <div class="contact-icon-top">
-                            <i class="bi bi-envelope-paper-heart"></i>
+                            <i class="bi bi-stars"></i>
                         </div>
 
-                        <h1 class="mb-4">BİZE <span class="text-gold">ULAŞIN</span></h1>
-                        <p class="text-secondary mb-5">Gökyüzü rehberliği için bir mesaj uzağındayız.</p>
+                        <h3 class="mb-4 text-white" style="font-family: 'Cinzel', serif;">İLETİŞİM <span
+                                class="text-gold">BİLGİLERİ</span></h3>
+
+                        <div class="contact-item mb-3">
+                            <i class="bi bi-envelope text-gold fs-5"></i>
+                            <div class="ms-3 text-start">
+                                <h6 class="text-gold mb-0 small">E-Posta</h6>
+                                <a href="mailto:burcyoraastro@gmail.com"
+                                    class="contact-link small">burcyoraastro@gmail.com</a>
+                            </div>
+                        </div>
 
                         <div class="contact-item mb-4">
-                            <i class="bi bi-envelope text-gold fs-4"></i>
+                            <i class="bi bi-instagram text-gold fs-5"></i>
                             <div class="ms-3 text-start">
-                                <h6 class="text-gold mb-0">E-Posta</h6>
-                                <a href="mailto:burcyoraastro@gmail.com"
-                                    class="contact-link">burcyoraastro@gmail.com</a>
+                                <h6 class="text-gold mb-0 small">Instagram</h6>
+                                <a href="https://instagram.com/burcyoraastro" target="_blank"
+                                    class="contact-link small">@burcyoraastro</a>
                             </div>
                         </div>
 
-                        <div class="contact-item mb-5">
-                            <i class="bi bi-instagram text-gold fs-4"></i>
-                            <div class="ms-3 text-start">
-                                <h6 class="text-gold mb-0">Instagram</h6>
-                                <a href="https://instagram.com/burcyora" target="_blank"
-                                    class="contact-link">@burcyora</a>
-                            </div>
-                        </div>
-
-                        <div class="contact-note">
+                        <div class="contact-note mt-4">
                             <i class="bi bi-clock-history text-gold me-2"></i>
-                            <span>Not: Mesajlar <strong>24 saat içinde</strong> yanıtlanır.</span>
+                            <span>Mesajlar <strong>24 saat içinde</strong> yanıtlanır.</span>
                         </div>
 
                     </div>
-
                 </div>
+
             </div>
         </div>
     </section>
-    < <footer id="iletisim" class="site-footer text-center">
-        <div class="container">
 
-            <h3 class="footer-logo mb-4">BURCYORA ASTRO</h3>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-            <div class="social-icons mb-4">
-                <a href="https://instagram.com/burcyora" target="_blank" class="social-link">
-                    <i class="bi bi-instagram"></i> @burcyora
-                    <span class="mx-3 text-muted">|</span>
-                    </footer>
+    <script src="form.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
