--- a/nedenbiz.html
+++ b/nedenbiz.html
@@ -18,7 +18,7 @@
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
             <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA ASTRO</span>
+                <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
 
