--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -49,7 +49,7 @@
 
                 <div class="col-lg-5 mb-5 mb-lg-0">
                     <div class="about-portrait-wrapper">
-                        <img src="/assets/img/underconst.jpeg" alt="Burçyora" class="img-fluid about-portrait">
+                        <img src="/assets/img/aboutme.jpg" alt="Burçyora" class="img-fluid about-portrait">
                         <div class="portrait-border"></div>
                     </div>
                 </div>
@@ -70,8 +70,8 @@
                         </p>
 
                         <div class="motto-box mt-4 mb-4">
-                            <i class="bi bi-quote text-gold fs-3"></i>
-                            <p class="mb-0 fst-italic">"“Karmaşayı azaltır, netlik kazandırırım”"</p>
+                            <!-- <i class="bi bi-quote text-gold fs-3"></i> -->
+                            <p class="mb-0 fst-italic">"Karmaşayı azaltır, netlik kazandırırım”</p>
                         </div>
                     </div>
                 </div>
