--- a/iletisim.html
+++ b/iletisim.html
@@ -55,32 +55,6 @@
                         <p class="text mb-4 small">Sorularınız veya randevu talepleriniz için formu
                             doldurabilirsiniz.</p>
 
-                        <!-- <form action="https://formsubmit.co/u.akbas1982@gmail.com" method="POST">
-
-                            <input type="hidden" name="_subject" value="İletişim Sayfasından Mesaj Var! 📩">
-                            <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_next" value="https://burcyoraastro.com/iletisim.html">
-
-                            <div class="mb-3">
-                                <label class="text-gold small mb-1">Adınız Soyadınız</label>
-                                <input type="text" name="Ad_Soyad" class="form-control custom-input"
-                                    placeholder="İsim Giriniz" required>
-                            </div>
-
-                            <div class="mb-3">
-                                <label class="text-gold small mb-1">E-Posta Adresiniz</label>
-                                <input type="email" name="Email" class="form-control custom-input"
-                                    placeholder="ornek@mail.com" required>
-                            </div>
-
-                            <div class="mb-4">
-                                <label class="text-gold small mb-1">Mesajınız / Açıklama</label>
-                                <textarea name="Mesaj" rows="4" class="form-control custom-input"
-                                    placeholder="Size nasıl yardımcı olabilirim?" required></textarea>
-                            </div>
-
-                            <button type="submit" class="btn btn-gold w-100 py-2 fw-bold"> GÖNDER </button>
-                        </form> -->
                         <form id="contactForm">
 
                             <div class="mb-3">
@@ -136,8 +110,8 @@
                             <i class="bi bi-instagram text-gold fs-5"></i>
                             <div class="ms-3 text-start">
                                 <h6 class="text-gold mb-0 small">Instagram</h6>
-                                <a href="https://instagram.com/burcyoraastro" target="_blank"
-                                    class="contact-link small">@burcyoraastro</a>
+                                <a href="https://instagram.com/burcyora" target="_blank"
+                                    class="contact-link small">@burcyora</a>
                             </div>
                         </div>
 
