--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
                                 Hizmetleri</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.php">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
 
                         <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
