--- a/nedenbiz.html
+++ b/nedenbiz.html
@@ -73,12 +73,12 @@
                             ve şu an hangi eşiğe geldiğini gösteriyoruz.</p>
                         <p>
                             Burcyora Astro’da amaç;
-                            tahmin değil farkındalık,
-                            genel yorum değil netliktir
+                            tahmin değil farkettirmek,
+                            genel yorum değil netleştirmektir.
                         </p>
 
                         <div class="motto-box mt-4 mb-4">
-                            <i class="bi bi-quote text-gold fs-3"></i>
+                            <!-- <i class="bi bi-quote text-gold fs-3"></i> -->
                             <p class="mb-0 fst-italic">Haritana gerçekten bakmak isteyenler için buradayız.</p>
                         </div>
                     </div>
