--- a/danismanlik.html
+++ b/danismanlik.html
@@ -129,6 +129,8 @@
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="form.js"></script>
 
 </html>
