--- a/iletisim.html
+++ b/iletisim.html
@@ -125,7 +125,16 @@
             </div>
         </div>
     </section>
+    <footer id="iletisim" class="site-footer text-center">
+        <div class="container">
 
+            <h3 class="footer-logo mb-4">BURCYORA ASTRO</h3>
+
+            <div class="social-icons mb-4">
+                <a href="https://instagram.com/burcyora" target="_blank" class="social-link">
+                    <i class="bi bi-instagram"></i> @burcyora
+                    <span class="mx-3 text-muted">|</span>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
